# distributed-text-editor

./: .gitignore  2  README.md  data.proto
backend/: Cargo.toml  build.rs  package.json
backend/src/: config.rs  doc.rs  lib.rs  macros.rs  main.rs  node.rs  node_crdt.rs  protocol.rs  service.rs  session.rs  side.rs  state.rs  tests.rs  transport.rs  tree.rs  tree_crdt.rs  types.rs
backend/src/doc/: doc.rs  mod.rs  tests.rs  types.rs
backend/src/protocol/: mod.rs
backend/src/state/: doc.rs  mod.rs  side.rs  tests.rs  types.rs
backend/src/transport/: codec.rs  connection.rs
frontend/: .gitignore  electron-builder.yml  index.html  main.js  package-lock.json  package.json  vite.main.config.mjs
frontend/src/: main.js  renderer.js
frontend/src/main/: index.ts  ipc.ts
frontend/src/preload/: index.d.ts  index.ts
frontend/src/renderer/: index.html
proto/: frame.proto  frames.proto
raport/: links_for_raport.md  raport.tex  to_add_to_raport_jan.tex
report/: to_add_to_raport.tex
scripts/: generate_data.py  run.py
test_data/: .gitignore  compering_gt_to_instructions.py  create_test_datasets.py  data_types.py  letters.json  test_data.py  test_dataset_adding.json  test_dataset_deleting.json  tests.py  wikipedia.py  wikipedia_data.py
test_data/data/: test_dataset_adding.json  test_dataset_adding.json_ground_truth.txt  test_dataset_adding_random.json  test_dataset_adding_random.json_ground_truth.txt  test_dataset_deleting_from_beginning.json  test_dataset_deleting_from_end.json  test_datasetadding_random.json
test_data/debug_out/: diff.txt
(+16 files in other folders)
