[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"