[package]
name = "backend"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "net", "io-std", "io-util", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1.0", features = ["derive", "rc"] }
futures = "0.3.31"
socket2 = "0.6"
bytes = "1.11"
bincode = "1.3.3"
prost = "0.14"
toml = "0.9.11"
rand = "0.9.2"
num-bigint = "0.4.6"
num-traits = "0.2.19"

[dev-dependencies]
serde_json = "1.0"

[build-dependencies]
prost-build = "0.13"
